<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.DetailActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_detail_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    app:layout_constraintCircleRadius="8dp"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@android:color/holo_green_dark" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    tools:text="03 March 2021" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_overview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/overview"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_release_date"
                    app:layout_constraintTop_toBottomOf="@id/tv_release_date" />

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_overview_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_overview_title"
                    tools:text="Overview detail" />

                <ImageButton
                    android:id="@+id/btn_favorite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/content_desc_button_favorite"
                    android:src="@drawable/ic_favorite_border_red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline_end"
                    app:layout_constraintTop_toTopOf="@+id/tv_title" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.4" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.9" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView

            android:id="@+id/tv_review_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/user_review"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/card_view_detail_movie"
            app:layout_constraintTop_toBottomOf="@id/card_view_detail_movie" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_review"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_review_title" />

        <ProgressBar
            android:id="@+id/progress_bar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>