<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/mm_favorite"
        android:icon="@drawable/ic_favorite_white"
        android:title="@string/favorite"
        app:showAsAction="always" />
</menu>